--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,75 @@
-*{
-    margin:0;
-    padding:0;
+body{
+    background: #020b16;
 }
-body {
-    background-color: #1f2029;
-    overflow: hidden;
-    height: 100vh;
-    width: 100%;
-}
-
-i{
-    color: black;
+header{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline
 }
 
 header {
-    background: whitesmoke;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 40px 40px 0;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
 }
-
-a {
+@media screen and (max-width: 420px) {
+    header {
+        padding: 20px 6.25%
+    }
+}
+header a {
     text-decoration: none;
+    color: #fff;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s
+}
+header a:hover {
+    opacity: 0.5
+}
+header .name {
+    font-size: 2.4rem;
+    letter-spacing: 0.1em;
+    position: relative;
+    z-index: 1000
+}
+@media screen and (max-width: 420px) {
+    header .name {
+        font-size: 1.6rem
+    }
+}
+header .wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative
+}
+header .icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 6.4rem
+}
+@media screen and (max-width: 420px) {
+    header .icons {
+        display: none
+    }
+}
+header .icons a {
+    margin-right: 3.2rem;
+    font-size: 2.4rem;
+    letter-spacing: 0.1em
+}
+header .icons a:last-child {
+    margin-right: 0;
 }
 
 [type="checkbox"]:checked,
@@ -27,11 +78,12 @@ a {
     left: -9999px;
 }
 
+
 .menu-icon:checked+label,
 .menu-icon:not(:checked)+label {
     position: fixed;
-    top: 63px;
-    right: 75px;
+    top: 50px;
+    right: 52%;
     display: block;
     width: 30px;
     height: 30px;
@@ -104,8 +156,8 @@ a {
 
 .nav {
     position: fixed;
-    top: 33px;
-    right: 50px;
+    top: 20px;
+    right: 50%;
     display: block;
     width: 80px;
     height: 80px;
